--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@slack/client": "^3.15.0",
     "dotenv": "^5.0.1",
+    "lodash.unescape": "^4.0.1",
     "puppeteer": "^0.10.2",
     "request": "^2.83.0",
     "tar": "^4.0.1"
